--- a/styles.css
+++ b/styles.css
@@ -579,6 +579,8 @@ p.last-p {
 .projects-1 h3.about-h {
   text-align: center;
   font-size: 32px;
+  padding-top: 32px;
+  z-index: 0;
 }
 /* servies i offer */
 .contacts {
@@ -742,9 +744,11 @@ p.play-me {
   align-items: center;
   min-height: 100vh;
   background: rgba(7, 4, 146, 0.973);
+  overflow: hidden;
 }
 .over-page h3 {
-  text-align: center;
+  margin-top: auto;
+  color: aliceblue;
 }
 .loader {
   position: relative;
