--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,15 @@ body {
   text-align: center;
   margin-top: 30px;
 }
+.portfo-img {
+  position: absolute;
+}
+.portfo-img {
+  position: absolute;
+  float: right;
+  right: 40px;
+  top: 132px;
+}
 span.logal {
   color: #fff;
   font-size: 26px;
@@ -37,7 +46,7 @@ span.logal {
   width: 106px;
   left: 30px;
   padding: 10px;
-  box-shadow: 14px 4px mediumslateblue;
+  box-shadow: 9px 2px mediumslateblue;
   position: absolute;
   border-radius: 48px 81px;
   top: 15px;
@@ -88,9 +97,10 @@ h2.hire-ngash {
   /* z-index: 0; */
   color: aliceblue;
   width: 156px;
-  margin-top: 196px;
+  margin-top: 200px;
   border-radius: 24px;
   padding: 14px;
+  margin-left: 30%;
   height: 60px;
   border: 2px solid;
   /* margin-bottom: 32px; */
@@ -153,17 +163,18 @@ h1.introduce {
   font-size: 24px;
   width: 388px;
   line-height: 1.5;
+  margin-top: -10%;
 }
 h1.introduce::before {
   content: "";
   background: #fff;
-  height: 245px;
+  height: 345px;
   width: 8px;
   border-radius: 14px;
   /* margin-right: auto; */
   margin-left: auto;
   display: block;
-  transform: translateY(162px);
+  transform: translateY(282px);
 }
 .get-me a {
   text-align: center;
@@ -313,8 +324,8 @@ section.home-wrapper {
   background: #57be03;
   z-index: 1;
   margin: auto;
-  margin-right: 15%;
-  margin-top: -12%;
+  margin-right: 55%;
+  margin-top: 5%;
   text-align: center;
   padding: 20px;
   float: right;
@@ -876,6 +887,15 @@ h3.skip-show {
     opacity: 0;
   }
 }
+/* ----------------portait */
+
+.portfo-img {
+  position: absolute;
+  float: right;
+  right: 98px;
+  top: 132px;
+  border-radius: 45px;
+}
 
 /* ================================================
               MEDIA QUERIES
@@ -883,10 +903,29 @@ h3.skip-show {
 
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) {
+  .portfo-img {
+    display: none;
+  }
 }
 
 /*Small devices (landscape phones, less than 768px)*/
 @media (max-width: 767.98px) {
+  .portfo-img {
+    display: none;
+  }
+  .portfo-img {
+    display: none;
+  }
+  .get-me {
+    height: 92px;
+    width: 248px;
+    background: rgba(0, 0, 0, 0.45);
+    /* z-index: 1; */
+    /* margin: auto; */
+    margin-right: 22%;
+    margin-top: 66px;
+    /* float: right; */
+  }
   @keyframes overa {
     from {
       background-color: rgba(13, 13, 14, 0.699);
@@ -925,7 +964,7 @@ h3.skip-show {
   }
 
   h1.introduce {
-    margin-top: 45%;
+    margin-top: -10%;
     margin-left: auto;
     color: #fff;
     /* margin: auto; */
@@ -1038,11 +1077,13 @@ h3.skip-show {
     margin: 28px;
   }
   /*  skills animate*/
+
   h2.hire-ngash {
     margin: auto;
     z-index: 0;
     color: aliceblue;
     width: 156px;
+    margin-top: 192px;
     /* margin-left: 196px; */
     border-radius: 28px;
     height: 60px;
@@ -1252,7 +1293,7 @@ h3.skip-show {
     background: rgba(0, 0, 0, 0.45);
     /* z-index: 1; */
     /* margin: auto; */
-
+    margin-left: 22%;
     margin-top: 66px;
     /* float: right; */
   }
