--- a/styles.css
+++ b/styles.css
@@ -325,7 +325,7 @@ section.home-wrapper {
   z-index: 1;
   margin: auto;
   margin-right: 55%;
-  margin-top: 5%;
+  margin-top: -28%;
   text-align: center;
   padding: 20px;
   float: right;
@@ -887,16 +887,7 @@ h3.skip-show {
     opacity: 0;
   }
 }
-/* ----------------portait */
-
-.portfo-img {
-  position: absolute;
-  float: right;
-  right: 98px;
-  top: 132px;
-  border-radius: 45px;
-}
-
+/* ----------------portait *
 /* ================================================
               MEDIA QUERIES
               ======================================= */
@@ -946,8 +937,179 @@ h3.skip-show {
 }
 
 /* Medium devices (tablets, less than 992px)*/
-@media (max-width: 991.98px) {
+@media (min-width: 768px) and (max-width: 991.98px) {
   section {
+    height: 60vh;
+    background-image: url("img/peter4.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+  }
+	img.portfo1-img{
+		display: none;
+	}
+  section.home-wrapper {
+    display: flex;
+    text-align: center;
+    height: 100%;
+    height: -webkit-fill-available;
+  }
+	.portfo-img {
+    position: absolute;
+    float: right;
+    right: 68px;
+    top: 28%;
+    border-radius: 45px;
+}
+  h1.introduce {
+    color: #fff;
+	  margin-top: 24%;
+	  margin-left: 10%;
+    padding: 20px 0px;
+    font-size: 24px;
+     width: 330px; 
+  }
+  h1.introduce::before {
+    content: "";
+    background: #fff;
+    height: 245px;
+    width: 8px;
+    border-radius: 14px;
+    /* margin-right: auto; */
+    margin-left: auto;
+    display: block;
+    transform: translateY(162px);
+  }
+	.get-me{
+		background: rgba(1,1,1,0.7);
+		margin-top: 5%;
+	}
+  .home-content {
+    margin: auto;
+    left: 30%;
+    top: 60%;
+    display: flex;
+  }
+	h2.hire-ngash {
+    margin: auto;
+    /* z-index: 0; */
+    color: aliceblue;
+    width: 156px;
+    margin-top: 40%;
+    border-radius: 24px;
+    padding: 14px;
+    margin-left: 42%;
+    height: 60px;
+    border: 2px solid;
+    /* margin-bottom: 32px; */
+    box-shadow: 4px 0 8px #1ac22c;
+    animation-name: breathe;
+    animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1.2);
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+}
+/* Large devices (tablets, less than 1200px)*/
+@media (min-width:991.98px) and (max-width: 1024px) {
+h1.introduce {
+    margin-left: 20%;
+    color: #fff;
+    font-family: "Alegreya Sans", sans-serif;
+    z-index: 3;
+    /* padding: 20px 10px; */
+    /* height: 28px; */
+    font-size: 28px;
+    width: 386px;
+    line-height: 1.5;
+    margin-top: 20%;
+}
+	.portfo-img {
+    position: absolute;
+    float: right;
+    right: 98px;
+    top: 35%;
+    border-radius: 45px;
+}
+	img.portfo1-img{
+		display: none;
+	}
+	h2.hire-ngash {
+    margin: auto;
+    /* z-index: 0; */
+    color: aliceblue;
+    width: 156px;
+    margin-top: 36%;
+    border-radius: 24px;
+    padding: 14px;
+    margin-left: 44%;
+    height: 60px;
+    border: 2px solid;
+    /* margin-bottom: 32px; */
+    box-shadow: 4px 0 8px #1ac22c;
+    animation-name: breathe;
+    animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1.2);
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+	.get-me {
+    height: 100px;
+    width: 250px;
+    background: rgba(1,1,1, 0.7);
+    z-index: 1;
+    margin: auto;
+    margin-right: 50%;
+    margin-top: 5%;
+    text-align: center;
+    padding: 20px;
+    float: right;
+}
+	span.humbuger{
+		font-size: 30px;
+	}
+span.humbuger,
+  span.humbugery {
+    font-size: 26px;
+    cursor: pointer;
+    z-index: 0;
+    height: 52px;
+    right: 30px;
+    padding: 5px;
+    position: absolute;
+    border-radius: 43px 79px;
+    top: 30px;
+    font-family: serif;
+    font-weight: 800;
+    /* background: linear-gradient(to right, #ff8a00, #da1b60); */
+    /* background: black; */
+  }
+	span.logal {
+  color: #fff;
+  font-size: 26px;
+  cursor: pointer;
+  z-index: 0;
+  height: 55px;
+  width: 106px;
+  left: 30px;
+  padding: 10px;
+  box-shadow: 9px 2px mediumslateblue;
+  position: absolute;
+  border-radius: 48px 81px;
+  top: 30px;
+  font-family: serif;
+  font-weight: 800;
+  background: linear-gradient(to right, #8a10, #111);
+  /* background: black; */
+  -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-iteration-count: 0.6s; /* Safari 4.0 - 8.0 */
+  animation-name: example;
+  animation-duration: 4s;
+  animation-iteration-count: 0.6s;
+}
+	
+section {
     height: 60vh;
     background-image: url("img/peter4.jpg");
     background-position: center;
@@ -962,41 +1124,23 @@ h3.skip-show {
     height: 100%;
     height: -webkit-fill-available;
   }
-
-  h1.introduce {
-    margin-top: -10%;
-    margin-left: auto;
-    color: #fff;
-    /* margin: auto; */
-    /* z-index: 3; */
-    /* padding: 20px 10px; */
-    /* height: 28px; */
-    font-size: 26px;
-    /* width: 388px; */
-    line-height: 1.5;
-  }
-  h1.introduce::before {
-    content: "";
-    background: #fff;
-    height: 245px;
-    width: 8px;
-    border-radius: 14px;
-    /* margin-right: auto; */
-    margin-left: auto;
-    display: block;
-    transform: translateY(162px);
-  }
-  .home-content {
-    margin: auto;
-    left: 30%;
-    top: 60%;
-    display: flex;
-  }
 }
 
 /* Large devices (desktops, less than 1200px)*/
-@media (max-width: 1199.98px) {
+@media (min-width: 1199.98px) {
+	img.portfo-img{
+		display: none;
+	}
+	img.portfo1-img{
+		display: flex;
+		float: right;
+		flex-wrap: wrap;
+		margin-right: 82px;
+		margin-top: -19%;
+		border-radius: 48px;
+	}
 }
+
 
 @media only screen and (min-width: 767px) and (max-width: 991.98px) {
   .over-page {
@@ -1235,6 +1379,9 @@ h3.skip-show {
     display: flex;
     flex-wrap: wrap;
   }
+	img.portfo1-img{
+		display: none;
+	}
   .home-content {
     display: none;
   }
@@ -1281,7 +1428,7 @@ h3.skip-show {
     color: #fff;
     /* margin: auto; */
     /* z-index: 3; */
-    padding-right: 16px;
+    margin-left: -4%;
     /* height: 28px; */
     font-size: 24px;
     /* width: 388px; */
